fix(client): improve headers layout (#2265)
* add back text for default avatars
* prevent overflowing avatar text

--- a/client/src/styles/components/_renku_cards.scss
+++ b/client/src/styles/components/_renku_cards.scss
@@ -16,6 +16,7 @@
   height: 198px;
   border-radius: 8px 8px 0 0;
   background-size: cover;
+  overflow: hidden;
 }
 .card-header-entity--large {
   height: 130px;
@@ -74,6 +75,12 @@
   line-height: 150px;
 }
 
+.card-bg-title--small {
+  font-size: 100px;
+  margin-top: 0;
+  padding-top: 30px;
+}
+
 .card-title {
   font-size: 27px;
   color: var(--bs-dark);
@@ -82,6 +89,7 @@
 }
 
 .card-tags {
+  margin-top: 8px;
   min-height: 24px;
 }
 
